--- a/SystemSO/SystemSO/SystemSO.vcxproj
+++ b/SystemSO/SystemSO/SystemSO.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shell.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Shell.cpp" />
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{07BF3DEA-A8D0-41EE-89F4-71291B9E3627}</ProjectGuid>
@@ -122,13 +129,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\shell\Shell\Shell\Shell.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\shell\Shell\Shell\Shell.cpp" />
-    <ClCompile Include="..\..\..\..\shell\Shell\Shell\Source.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
