Dodanie projektu Interpreter do Solucji oraz dodanie jego referencji do shella. Adres biblioteki interpretera to #include"../Interpreter/Interpreter.hpp"

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/SystemSO/.vs
+/SystemSO/SystemSO/x64
+/SystemSO/SystemSO/Debug
+/SystemSO/Interpreter/x64
+/SystemSO/Interpreter/Debug
