--- a/SystemSO/Interpreter/Interpreter.vcxproj
+++ b/SystemSO/Interpreter/Interpreter.vcxproj
@@ -143,20 +143,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AssemblerCommandFactory.hpp" />
+    <ClInclude Include="AssemblerCommandFactoryInterface.hpp" />
     <ClInclude Include="AssemblerCommandInterface.hpp" />
-    <ClInclude Include="AssemblerTranslator.hpp" />
-    <ClInclude Include="Command.hpp" />
-    <ClInclude Include="ConsoleCommand.hpp" />
+    <ClInclude Include="CommandScript\ArgumentType.hpp" />
+    <ClInclude Include="CommandScript\AssemblerCommandFactory.hpp" />
+    <ClInclude Include="CommandScript\AssemblerTranslator.hpp" />
+    <ClInclude Include="CommandScript\Commands\Command.hpp" />
+    <ClInclude Include="CommandScript\Commands\ConsoleCommand.hpp" />
+    <ClInclude Include="CommandScript\Commands\FileCommand.hpp" />
+    <ClInclude Include="CommandScript\Commands\LogicCommand.hpp" />
+    <ClInclude Include="CommandScript\Commands\MathCommand.hpp" />
+    <ClInclude Include="CommandScript\Commands\ProcessCommand.hpp" />
     <ClInclude Include="Conversion.hpp" />
     <ClInclude Include="Flags.hpp" />
     <ClInclude Include="Interpreter.hpp" />
-    <ClInclude Include="LogicCommand.hpp" />
-    <ClInclude Include="MathCommand.hpp" />
-    <ClInclude Include="PCB.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AssemblerCommandFactory.cpp" />
+    <ClCompile Include="CommandScript\AssemblerCommandFactory.cpp" />
+    <ClCompile Include="CommandScript\Commands\Command.cpp" />
+    <ClCompile Include="CommandScript\Commands\ConsoleCommand.cpp" />
+    <ClCompile Include="CommandScript\Commands\LogicCommand.cpp" />
+    <ClCompile Include="CommandScript\Commands\MathCommand.cpp" />
+    <ClCompile Include="Conversion.cpp" />
     <ClCompile Include="Interpreter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
