--- a/SystemSO/Interpreter/Interpreter.vcxproj.filters
+++ b/SystemSO/Interpreter/Interpreter.vcxproj.filters
@@ -14,16 +14,13 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="Header Files\CommandScript">
-      <UniqueIdentifier>{6b8ecc8f-c0d7-40a9-bf7f-072c48581bcf}</UniqueIdentifier>
+      <UniqueIdentifier>{e1a6730c-f98b-4c3c-a181-02ae2890cf2d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\CommandScript\Command">
-      <UniqueIdentifier>{18bcee3e-3031-4158-8ed0-9ba53b6463fe}</UniqueIdentifier>
+    <Filter Include="Header Files\CommandScript\Commands">
+      <UniqueIdentifier>{8e01baef-35f0-49fa-92ae-1fdbf82fc35d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AssemblerCommandFactory.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AssemblerCommandInterface.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -36,31 +33,58 @@
     <ClInclude Include="Interpreter.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PCB.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Command.hpp">
-      <Filter>Header Files\CommandScript\Command</Filter>
-    </ClInclude>
-    <ClInclude Include="LogicCommand.hpp">
-      <Filter>Header Files\CommandScript\Command</Filter>
-    </ClInclude>
-    <ClInclude Include="MathCommand.hpp">
-      <Filter>Header Files\CommandScript\Command</Filter>
-    </ClInclude>
-    <ClInclude Include="AssemblerTranslator.hpp">
+    <ClInclude Include="CommandScript\ArgumentType.hpp">
       <Filter>Header Files\CommandScript</Filter>
     </ClInclude>
-    <ClInclude Include="ConsoleCommand.hpp">
-      <Filter>Header Files\CommandScript\Command</Filter>
+    <ClInclude Include="CommandScript\AssemblerTranslator.hpp">
+      <Filter>Header Files\CommandScript</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\MathCommand.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\ProcessCommand.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\LogicCommand.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\FileCommand.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\ConsoleCommand.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\Commands\Command.hpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="AssemblerCommandFactoryInterface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandScript\AssemblerCommandFactory.hpp">
+      <Filter>Header Files\CommandScript</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AssemblerCommandFactory.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Interpreter.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Conversion.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandScript\AssemblerCommandFactory.cpp">
+      <Filter>Header Files\CommandScript</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandScript\Commands\Command.cpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandScript\Commands\ConsoleCommand.cpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandScript\Commands\LogicCommand.cpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandScript\Commands\MathCommand.cpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
