--- a/SystemSO/Interpreter/Interpreter.vcxproj.filters
+++ b/SystemSO/Interpreter/Interpreter.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="CommandScript\Commands\MathCommand.cpp">
       <Filter>Header Files\CommandScript\Commands</Filter>
     </ClCompile>
+    <ClCompile Include="CommandScript\Commands\FileCommand.cpp">
+      <Filter>Header Files\CommandScript\Commands</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
