--- a/SystemSO/SystemSO/SystemSO.vcxproj
+++ b/SystemSO/SystemSO/SystemSO.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="filesystemv2.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="O1Scheduler.h" />
     <ClInclude Include="Page.h" />
     <ClInclude Include="Process.hpp" />
     <ClInclude Include="ProcessManager.hpp" />
@@ -30,6 +31,7 @@
   <ItemGroup>
     <ClCompile Include="filesystemv2.cpp" />
     <ClCompile Include="memory.cpp" />
+    <ClCompile Include="O1Scheduler.cpp" />
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="ProcessManager.cpp" />
