--- a/SystemSO/SystemSO/SystemSO.vcxproj.filters
+++ b/SystemSO/SystemSO/SystemSO.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="O1Scheduler.h">
       <Filter>O1</Filter>
     </ClInclude>
+    <ClInclude Include="LoadProgramToMemory.hpp">
+      <Filter>Memory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Shell.cpp">
